--- a/js/index.html
+++ b/js/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 class="a"></h1>
+    <h1 class="n"></h1>
 
     <script src="script.js"></script>
 </body>
