--- a/js/index.html
+++ b/js/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/js/style.css">
 </head>
 <body>
-    <h1 class="n"></h1>
+    <div class="card"></div>
 
     <script src="script.js"></script>
 </body>
