--- a/js/index.html
+++ b/js/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/js/style.css">
 </head>
 <body>
-    <div class="card"></div>
+   <h1 class="w"></h1>
 
     <script src="script.js"></script>
 </body>
